--- a/index.html
+++ b/index.html
@@ -3,53 +3,72 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="description" content="IPA Vowels and Consonants"/>
+  <meta name="keywords" content="IPA Vowels and Consonants"/>
   <title>VowelsAndConsanants</title>
-  
-  
-  
-      <link rel="stylesheet" href="css/style.css">
 
-  
+  <link rel="apple-touch-icon" sizes="57x57" href="./favicon/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="./favicon/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="./favicon/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="./favicon/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="./favicon/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="./favicon/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="./favicon/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="./favicon/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="./favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="./favicon/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+  <link rel="manifest" href="./favicon/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="./favicon/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
+
+  <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
+<div class="wrapper-header">
   <div class="custom-radio d-flex">
-  <div class="inline-div w-50 pr-10">
-    <input class="ipa" id="ipa-v" value="ipa-vowels" name="ipa" type="radio"/>
-    <label for="ipa-v">Vowels</label>
+    <div class="inline-div w-50 pr-10">
+      <input class="ipa" id="ipa-v" value="ipa-vowels" name="ipa" type="radio"/>
+      <label for="ipa-v">Vowels</label>
+    </div>
+    <div class="inline-div w-50 pl-10">
+      <input class="ipa" id="ipa-c" value="ipa-consonants" name="ipa" type="radio" />
+      <label for="ipa-c">Consonants</label>
+    </div>
   </div>
-  <div class="inline-div w-50 pl-10">
-    <input class="ipa" id="ipa-c" value="ipa-consonants" name="ipa" type="radio" />
-    <label for="ipa-c">Consonants</label>
+
+  <div class="custom-select d-flex">
+    <div class="inline-div w-50 pr-10">
+      <select class="browser-default" id="delay">
+        <option value="3">3</option>
+        <option value="5">5</option>
+        <option value="10">10</option>
+        <option value="15">15</option>
+        <option value="20">20</option>
+      </select>
+    </div>
+    <div class="custom-checkbox inline-div w-50 pl-10">
+      <label class="control control--checkbox">
+        Random
+        <input id="shuffle" type="checkbox" />
+        <span class="control__indicator"></span>
+      </label>
+    </div>
+  </div>
+
+  <div class="custom-button d-flex">
+    <button class="bttn" id="vowels-btn">Start</button>
   </div>
 </div>
-
-<div class="custom-select d-flex">
-  <div class="inline-div w-50 pr-10">
-    <select class="browser-default" id="delay">
-      <option value="1">3</option>
-      <option value="5">5</option>
-      <option value="10">10</option>
-      <option value="15">15</option>
-      <option value="20">20</option>
-    </select>
-  </div>
-  <div class="custom-checkbox inline-div w-50 pl-10">
-    <label class="control control--checkbox">
-      Random
-      <input id="shuffle" type="checkbox" />
-      <span class="control__indicator"></span>
-    </label>
-  </div>
-</div>
-
-<div class="custom-button d-flex">
-  <button class="bttn" id="vowels-btn">Start</button>
-</div>
-
-<div class="d-flex card">
-  
+<div class="d-flex card"> 
   <div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
@@ -61,13 +80,8 @@
     </div>
   </div>
 </div>
-  
-  
 
-    <script  src="js/index.js"></script>
-
-
-
+  <script  src="js/index.js"></script>
 
 </body>
 
