--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
   <div class="custom-select d-flex">
     <div class="inline-div w-50 pr-10">
       <select class="browser-default" id="delay">
+        <option value="1">1</option>
         <option value="3">3</option>
         <option value="5">5</option>
         <option value="10">10</option>
