--- a/index.html
+++ b/index.html
@@ -33,6 +33,30 @@
 
 <body>
 
+<header class="top-header">
+  <section class="material-design-hamburger">
+      <button class="material-design-hamburger__icon">
+        <span>Menu</span>
+        <span>Close</span>
+      </button>
+    </section>
+  
+    <section class="menu menu--off">
+      <ul>
+        <li>Kỹ thuật tạo nguyên âm
+
+          <ul>
+            <li>
+              <a href="#" title="">Số 1</a>
+            </li>
+            <li>
+              <a href="#" title="">Số 2</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </section>
+</header>
 <div class="wrapper-header">
   <div class="custom-radio d-flex">
     <div class="inline-div w-50 pr-10">
