--- a/index.html
+++ b/index.html
@@ -42,19 +42,343 @@
     </section>
   
     <section class="menu menu--off">
-      <ul>
-        <li>Kỹ thuật tạo nguyên âm
+      <!-- Tab links -->
+      <div class="tab">
+        <button class="tablinks" onclick="openCity(event, 'tab-vowels')" id="defaultOpen">Nguyên âm</button>
+        <button class="tablinks" onclick="openCity(event, 'tab-consonants')">Phụ âm</button>
+      </div>
 
-          <ul>
-            <li>
-              <a href="#" title="">Số 1</a>
-            </li>
-            <li>
-              <a href="#" title="">Số 2</a>
-            </li>
-          </ul>
-        </li>
-      </ul>
+      <!-- Tab content -->
+      <div id="tab-vowels" class="tabcontent">
+        <ul>
+          <li>
+            <a href="#vowels-1" class="accordion-toggle done">Số 1</a>
+            <div class="accordion-content" id="vowels-1">
+              <ol>
+                <li>Môi mở</li>
+                <li>Hàm dưới hạ xuống hết cỡ (lưu ý hai má không hóp)</li>
+                <li>Tạo âm 'o' như trong từ 'ò ó o'</li>
+                <li>Giữ chắc khẩu hình</li>
+              </ol>
+            </div>
+          </li>
+
+          <li>
+            <a href="#vowels-2" class="accordion-toggle done">Số 2</a>
+            <div class="accordion-content" id="vowels-2">
+              <p class="note">Bước 1 - tạo âm 'a'</p>
+              <ol>
+                <li>Khẩu hình mở ngang tạo thành hình chữ nhật, ngang nhiều hơn dọc</li>
+                <li>Tao âm 'a'  như khi cười haha</li>
+                <li>Giữ nguyên khẩu hình</li>
+              </ol>
+              <p class="note">Bước 2 - tạo âm 'ì'</p>
+              <ol>
+                <li>Cơ miệng mở ngang</li>
+                <li>Nâng nhanh hàm dưới lên</li>
+                <li>Chính giữa thân lưỡi có khuynh hướng chạm vào vòm họng</li>
+                <li>Tạo âm 'ì' như trong từ kiki</li>
+                <li>Tạo âm 'ì' nhỏ nhẹ</li>
+                <li>Giữ chắc khẩu hình sau khi tạo âm</li>
+              </ol>
+              <p class="note">Bước 3 - kết hợp</p>
+              <ol>
+                <li>Kết hợp âm 'a' và 'ì' theo tỉ lệ 3: 1</li>
+            </div>
+          </li>
+          <li>
+            <a href="#vowels-3" class="accordion-toggle">Số 3</a>
+            <div class="accordion-content" id="vowels-3">
+              Updating...
+            </div>
+          </li>
+          
+          <li>
+            <a href="#vowels-4" class="accordion-toggle">Số 4</a>
+            <div class="accordion-content" id="vowels-4">
+              Updating...
+            </div>
+          </li>
+          <li>
+            <a href="#vowels-5" class="accordion-toggle">Số 5</a>
+            <div class="accordion-content" id="vowels-5">
+              Updating...
+            </div>
+          </li>
+          <li>
+            <a href="#vowels-6" class="accordion-toggle">Số 6</a>
+            <div class="accordion-content" id="vowels-6">
+              Updating...
+            </div>
+          </li>
+
+          <li>
+            <a href="#vowels-7" class="accordion-toggle">Số 7</a>
+            <div class="accordion-content" id="vowels-7">
+              Updating...
+            </div>
+          </li>
+          <li>
+            <a href="#vowels-8" class="accordion-toggle">Số 8</a>
+            <div class="accordion-content" id="vowels-8">
+              Updating...
+            </div>
+          </li>
+          <li>
+            <a href="#vowels-9" class="accordion-toggle">Số 9</a>
+            <div class="accordion-content" id="vowels-9">
+              Updating...
+            </div>
+          </li>
+
+          <li>
+            <a href="#vowels-10" class="accordion-toggle done">Số 10</a>
+            <div class="accordion-content" id="vowels-10">
+              <ol>
+                <li>Môi mở, khẩu hình theo chiều dọc và không hạ hàm dưới</li>
+                <li>Chính giữa thân lưỡi nâng lên chạm vào vòm họng</li>
+                <li>Ép lực</li>
+                <li>Tạo âm 'ia' như trong từ 'kia kìa'</li>
+                <li>Lưỡi hạ xuống nhanh tạo hình gợn sóng</li>
+                <li>Không di chuyển hàm dưới</li>
+                <li>Giữ chắc khẩu hình</li>
+              </ol>
+            </div>
+          </li>
+          <li>
+            <a href="#vowels-11" class="accordion-toggle">Số 11</a>
+            <div class="accordion-content" id="vowels-11">
+              Updating...
+            </div>
+          </li>
+          <li>
+            <a href="#vowels-11sub" class="accordion-toggle">Số 11 phụ</a>
+            <div class="accordion-content" id="vowels-11sub">
+              Updating...
+            </div>
+          </li>
+
+          <li>
+            <a href="#vowels-12" class="accordion-toggle">Số 12</a>
+            <div class="accordion-content" id="vowels-12">
+              Updating...
+            </div>
+          </li>
+          <li>
+            <a href="#vowels-13" class="accordion-toggle">Số 13</a>
+            <div class="accordion-content" id="vowels-13">
+              Updating...
+            </div>
+          </li>
+          <li>
+            <a href="#vowels-13sub" class="accordion-toggle">Số 13 phụ</a>
+            <div class="accordion-content" id="vowels-13sub">
+              Updating...
+            </div>
+          </li>
+
+          <li>
+            <a href="#vowels-14" class="accordion-toggle done">Số 14</a>
+            <div class="accordion-content" id="vowels-14">
+              <ol>
+                <li>Khẩu hình mở dọc nhẹ</li>
+                <li>Hàm dưới nâng lên nhanh</li>
+                <li>Tạo âm 'a' dấu '^' như trong từ bất khuất</li>
+              </ol>
+            </div>
+          </li>
+          <li>
+            <a href="#vowels-15" class="accordion-toggle done">Số 15</a>
+            <div class="accordion-content" id="vowels-15">
+              <ol>
+                <li>Khẩu hình mở dọc nhẹ</li>
+                <li>Hàm dưới có khuynh hướng dịch chuyển ra phía trước</li>
+                <li>Lưỡi trũng</li>
+                <li>Tạo âm 'ơ' như trong từ cảm ơn, phởn phơ</li>
+              </ol>
+            </div>
+          </li>
+          <li>
+            <a href="#vowels-15sub" class="accordion-toggle done">Số 15 phụ</a>
+            <div class="accordion-content" id="vowels-15sub">
+              <ol>
+                <li>Khẩu hình mở dọc nhẹ</li>
+                <li>Hàm dưới có khuynh hướng dịch chuyển ra phía trước</li>
+                <li>Lưỡi trũng</li>
+                <li>Tạo âm 'ơ' thêm dấu huyền</li>
+              </ol>
+            </div>
+          </li>
+        </ul>
+      </div>
+
+      <div id="tab-consonants" class="tabcontent">
+        <ul>
+          <li>
+            <a href="#consonants-1" class="accordion-toggle">Số 1</a>
+            <div class="accordion-content" id="consonants-1">
+              Updating...
+            </div>
+          </li>
+          <li>
+            <a href="#consonants-2" class="accordion-toggle">Số 2</a>
+            <div class="accordion-content" id="consonants-2">
+              Updating...
+            </div>
+          </li>
+          <li>
+            <a href="#consonants-3" class="accordion-toggle">Số 3</a>
+            <div class="accordion-content" id="consonants-3">
+              Updating...
+            </div>
+          </li>
+          <li>
+            <a href="#consonants-4" class="accordion-toggle">Số 4</a>
+            <div class="accordion-content" id="consonants-4">
+              Updating...
+            </div>
+          </li>
+          <li>
+            <a href="#consonants-5" class="accordion-toggle">Số 5</a>
+            <div class="accordion-content" id="consonants-5">
+              Updating...
+            </div>
+          </li>
+          <li>
+            <a href="#consonants-6" class="accordion-toggle">Số 6</a>
+            <div class="accordion-content" id="consonants-6">
+              Updating...
+            </div>
+          </li>
+          <li>
+            <a href="#consonants-7" class="accordion-toggle">Số 7</a>
+            <div class="accordion-content" id="consonants-7">
+              Updating...
+            </div>
+          </li>
+          <li>
+            <a href="#consonants-8" class="accordion-toggle">Số 8</a>
+            <div class="accordion-content" id="consonants-8">
+              Updating...
+            </div>
+          </li>
+          <li>
+            <a href="#consonants-9" class="accordion-toggle">Số 9</a>
+            <div class="accordion-content" id="consonants-9">
+              Updating...
+            </div>
+          </li>
+          <li>
+            <a href="#consonants-10" class="accordion-toggle">Số 10</a>
+            <div class="accordion-content" id="consonants-10">
+              Updating...
+            </div>
+          </li>
+          <li>
+            <a href="#consonants-11" class="accordion-toggle">Số 11</a>
+            <div class="accordion-content" id="consonants-11">
+              Updating...
+            </div>
+          </li>
+          <li>
+            <a href="#consonants-12" class="accordion-toggle">Số 12</a>
+            <div class="accordion-content" id="consonants-12">
+              Updating...
+            </div>
+          </li>
+          <li>
+            <a href="#consonants-13" class="accordion-toggle">Số 13</a>
+            <div class="accordion-content" id="consonants-13">
+              Updating...
+            </div>
+          </li>
+          <li>
+            <a href="#consonants-14" class="accordion-toggle">Số 14</a>
+            <div class="accordion-content" id="consonants-14">
+              Updating...
+            </div>
+          </li>
+          <li>
+            <a href="#consonants-15" class="accordion-toggle">Số 15</a>
+            <div class="accordion-content" id="consonants-15">
+              Updating...
+            </div>
+          </li>
+          <li>
+            <a href="#consonants-16" class="accordion-toggle">Số 16</a>
+            <div class="accordion-content" id="consonants-16">
+              Updating...
+            </div>
+          </li>
+          <li>
+            <a href="#consonants-17" class="accordion-toggle">Số 17</a>
+            <div class="accordion-content" id="consonants-17">
+              Updating...
+            </div>
+          </li>
+          <li>
+            <a href="#consonants-18" class="accordion-toggle">Số 18</a>
+            <div class="accordion-content" id="consonants-18">
+              Updating...
+            </div>
+          </li>
+          <li>
+            <a href="#consonants-19" class="accordion-toggle">Số 19</a>
+            <div class="accordion-content" id="consonants-19">
+              Updating...
+            </div>
+          </li>
+          <li>
+            <a href="#consonants-20" class="accordion-toggle">Số 20</a>
+            <div class="accordion-content" id="consonants-20">
+              Updating...
+            </div>
+          </li>
+          <li>
+            <a href="#consonants-21" class="accordion-toggle done">Số 21</a>
+            <div class="accordion-content" id="consonants-21">
+              <ol>
+                <li>Hóp má tròn môi (lưu ý: hai môi không chạm nhau)</li>
+                <li>Dồn lực vào đầu môi</li>
+                <li>Tạo âm /w/ như trong từ quằn quại (lưu ý: không di chuyển hàm dưới)</li>
+              </ol>
+            </div>
+          </li>
+          <li>
+            <a href="#consonants-22" class="accordion-toggle done">Số 22</a>
+            <div class="accordion-content" id="consonants-22">
+              <ol>
+                <li>Hóp má tròn môi (lưu ý: hai môi không chạm nhau)</li>
+                <li>Lưỡi cong, mặt dưới phía đầu lưỡi gần như chạm chính giữa vòm họng</li>
+                <li>Tạo âm 'r' như trong từ rình rang</li>
+                <li>Thả lỏng cơ mặt/lưỡi sau khi tạo âm</li>
+              </ol>
+              <p class="note">Kỹ thuật tạo phụ âm số 22 khi <span class="red">đứng sau nguyên âm</span> thì bỏ qua bước 1.</p>
+            </div>
+          </li>
+          <li>
+            <a href="#consonants-23" class="accordion-toggle done">Số 23</a>
+            <div class="accordion-content" id="consonants-23">
+              <ol>
+                <li>Lấy hơi, hóp bụng</li>
+                <li>Tạo âm 'h' như trong từ 'hú hồn'</li>
+                <li>Độ mạnh gấp 3 lần</li>
+              </ol>
+            </div>
+          </li>
+          <li>
+            <a href="#consonants-24" class="accordion-toggle done">Số 24</a>
+            <div class="accordion-content" id="consonants-24">
+              <ol>
+                <li>Môi mở</li>
+                <li>Đầu lưỡi chạm chính giữa vùng tiếp giáp chân răng và nướu răng của hàm trên (lưu ý: không hóp má tròn môi)</li>
+                <li>Ép lực</li>
+                <li>Tạo âm 'l' như trong từ 'lượn lờ'</li>
+              </ol>
+            </div>
+          </li>
+        </ul>
+      </div>
     </section>
 </header>
 <div class="wrapper-header">
