--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description" content="IPA Vowels and Consonants"/>
   <meta name="keywords" content="IPA Vowels and Consonants"/>
-  <title>VowelsAndConsanants</title>
+  <title>Vowels And Consonants</title>
 
   <link rel="apple-touch-icon" sizes="57x57" href="./favicon/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="./favicon/apple-icon-60x60.png">
