--- a/index.html
+++ b/index.html
@@ -339,8 +339,9 @@
             <div class="accordion-content" id="consonants-21">
               <ol>
                 <li>Hóp má tròn môi (lưu ý: hai môi không chạm nhau)</li>
+                <li>Lực từ dưới lên, từ trong ra ngoài</li>
                 <li>Dồn lực vào đầu môi</li>
-                <li>Tạo âm /w/ như trong từ quằn quại (lưu ý: không di chuyển hàm dưới)</li>
+                <li>Tạo âm /w/ như trong từ quằn quại (lưu ý: không di chuyển hàm dưới và không mở ngang)</li>
               </ol>
             </div>
           </li>
@@ -350,6 +351,7 @@
               <ol>
                 <li>Hóp má tròn môi (lưu ý: hai môi không chạm nhau)</li>
                 <li>Lưỡi cong, mặt dưới phía đầu lưỡi gần như chạm chính giữa vòm họng</li>
+                <li>Đẩy lực từ trong ra ngoài</li>
                 <li>Tạo âm 'r' như trong từ rình rang</li>
                 <li>Thả lỏng cơ mặt/lưỡi sau khi tạo âm</li>
               </ol>
