--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
           <li>
             <a href="#vowels-2" class="accordion-toggle done">Số 2</a>
             <div class="accordion-content" id="vowels-2">
-              <p class="note">Bước 1 - tạo âm 'a'</p>
+              <p class="note">Phần 1 - tạo âm 'a'</p>
               <ol>
                 <li>Khẩu hình mở ngang tạo thành hình chữ nhật, ngang nhiều hơn dọc</li>
                 <li>Tao âm 'a'  như khi cười haha</li>
                 <li>Giữ nguyên khẩu hình</li>
               </ol>
-              <p class="note">Bước 2 - tạo âm 'ì'</p>
+              <p class="note">Phần 2 - tạo âm 'ì'</p>
               <ol>
                 <li>Cơ miệng mở ngang</li>
                 <li>Nâng nhanh hàm dưới lên</li>
@@ -81,9 +81,10 @@
                 <li>Tạo âm 'ì' nhỏ nhẹ</li>
                 <li>Giữ chắc khẩu hình sau khi tạo âm</li>
               </ol>
-              <p class="note">Bước 3 - kết hợp</p>
+              <p class="note">Phần 3 - kết hợp</p>
               <ol>
-                <li>Kết hợp âm 'a' và 'ì' theo tỉ lệ 3: 1</li>
+                <li>Kết hợp âm 'a' và 'ì' theo tỉ lệ 3:1</li>
+              </ol>
             </div>
           </li>
           <li>
@@ -96,19 +97,63 @@
           <li>
             <a href="#vowels-4" class="accordion-toggle">Số 4</a>
             <div class="accordion-content" id="vowels-4">
-              Updating...
+              <ol>
+                <li>Hóp mà tròn môi</li>
+                <li>Hạ hàm dưới xuống</li>
+                <li>Lực từ dưới lên, từ trong ra ngoài</li>
+                <li>Tạo âm 'o', lưu ý vẫn giữ hóp má tròn môi</li>
+                <li>Giữ chắc khẩu hình</li>
+              </ol>
             </div>
           </li>
           <li>
             <a href="#vowels-5" class="accordion-toggle">Số 5</a>
             <div class="accordion-content" id="vowels-5">
-              Updating...
+              <p class="note">Phần 1 - tạo âm 'o'</p>
+              <ol>
+                <li>Hóp mà tròn môi</li>
+                <li>Hạ hàm dưới xuống</li>
+                <li>Lực từ dưới lên, từ trong ra ngoài</li>
+                <li>Tạo âm 'o', lưu ý vẫn giữ hóp má tròn môi</li>
+                <li>Giữ chắc khẩu hình</li>
+              </ol>
+              <p class="note">Phần 2 - tạo âm 'ì'</p>
+              <ol>
+                <li>Cơ miệng mở ngang</li>
+                <li>Nâng nhanh hàm dưới lên</li>
+                <li>Luỡi chạm vòm họng</li>
+                <li>Tạo âm 'ì' như trong từ kiki</li>
+                <li>Tạo âm 'ì' nhanh, nhỏ, nhẹ</li>
+                <li>Giữ chắc khẩu hình</li>
+              </ol>
+              <p class="note">Phần 3 - kết hợp</p>
+              <ol>
+                <li>Kết hợp âm 'o' và 'ì' theo tỉ lệ 3:1</li>
+              </ol>
             </div>
           </li>
           <li>
             <a href="#vowels-6" class="accordion-toggle">Số 6</a>
             <div class="accordion-content" id="vowels-6">
-              Updating...
+              <p class="note">Phần 1 - tạo âm 'o'</p>
+              <ol>
+                <li>Hóp mà tròn môi</li>
+                <li>Hạ hàm dưới xuống</li>
+                <li>Lực từ dưới lên, từ trong ra ngoài</li>
+                <li>Tạo âm 'o', lưu ý vẫn giữ hóp má tròn môi</li>
+                <li>Giữ chắc khẩu hình</li>
+              </ol>
+              <p class="note">Phần 2 - tạo âm 'ù'</p>
+              <ol>
+                <li>Hóp má tròn môi</li>
+                <li>Hàm dưới hạ xuống và nâng lên nhanh</li>
+                <li>Tạo âm 'ù' giống trong từ 'u ú ù'</li>
+                <li>Tạo âm 'ù' nhanh, nhỏ, nhẹ</li>
+              </ol>
+              <p class="note">Phần 3 - kết hợp</p>
+              <ol>
+                <li>Kết hợp âm 'o' và 'ù' theo tỉ lệ 3:1</li>
+              </ol>
             </div>
           </li>
 
@@ -325,13 +370,23 @@
           <li>
             <a href="#consonants-19" class="accordion-toggle">Số 19</a>
             <div class="accordion-content" id="consonants-19">
-              Updating...
+              <ol>
+                <li>Môi mở</li>
+                <li>1/3 đầu lưỡi nâng lên chạm vòm họng</li>
+                <li>Ép lực, đẩy âm lên mũi</li>
+                <li>Tạo âm 'n' giống từ nô nức trong tiếng Việt với độ mạnh gấp 3 lần</li>
+              </ol>
             </div>
           </li>
           <li>
             <a href="#consonants-20" class="accordion-toggle">Số 20</a>
             <div class="accordion-content" id="consonants-20">
-              Updating...
+              <ol>
+                <li>Môi mở</li>
+                <li>Phần cuối lưỡi nâng lên chạm vòm họng</li>
+                <li>Ép lực, đẩy âm lên mũi</li>
+                <li>Tạo âm 'ng' giống từ ngây ngất trong tiếng Việt với độ mạnh gấp 3 lần</li>
+              </ol>
             </div>
           </li>
           <li>
