--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           </li>
           
           <li>
-            <a href="#vowels-4" class="accordion-toggle">Số 4</a>
+            <a href="#vowels-4" class="accordion-toggle done">Số 4</a>
             <div class="accordion-content" id="vowels-4">
               <ol>
                 <li>Hóp mà tròn môi</li>
@@ -107,7 +107,7 @@
             </div>
           </li>
           <li>
-            <a href="#vowels-5" class="accordion-toggle">Số 5</a>
+            <a href="#vowels-5" class="accordion-toggle done">Số 5</a>
             <div class="accordion-content" id="vowels-5">
               <p class="note">Phần 1 - tạo âm 'o'</p>
               <ol>
@@ -133,7 +133,7 @@
             </div>
           </li>
           <li>
-            <a href="#vowels-6" class="accordion-toggle">Số 6</a>
+            <a href="#vowels-6" class="accordion-toggle done">Số 6</a>
             <div class="accordion-content" id="vowels-6">
               <p class="note">Phần 1 - tạo âm 'o'</p>
               <ol>
@@ -368,7 +368,7 @@
             </div>
           </li>
           <li>
-            <a href="#consonants-19" class="accordion-toggle">Số 19</a>
+            <a href="#consonants-19" class="accordion-toggle done">Số 19</a>
             <div class="accordion-content" id="consonants-19">
               <ol>
                 <li>Môi mở</li>
@@ -379,7 +379,7 @@
             </div>
           </li>
           <li>
-            <a href="#consonants-20" class="accordion-toggle">Số 20</a>
+            <a href="#consonants-20" class="accordion-toggle done">Số 20</a>
             <div class="accordion-content" id="consonants-20">
               <ol>
                 <li>Môi mở</li>
