--- a/index.html
+++ b/index.html
@@ -625,6 +625,7 @@
       <select class="browser-default" id="swap">
         <option value="number">Number</option>
         <option value="word">Word</option>
+        <option value="mixed">Mixed</option>
       </select>
   </div>
   <div class="custom-radio d-flex">
