--- a/index.html
+++ b/index.html
@@ -491,27 +491,82 @@
             </div>
           </li>
           <li>
-            <a href="#consonants-13" class="accordion-toggle">Số 13 <span>/t/</span></a>
+            <a href="#consonants-13" class="accordion-toggle done">Số 13 <span>/t/</span></a>
             <div class="accordion-content" id="consonants-13">
-              Updating...
+              <ol>
+                <li>Môi mở</li>
+                <li>Hai hàm răng gần như chạm nhau</li>
+                <li>Đầu lưỡi chạm đầu răng hàm trên</li>
+                <li>Bật mạnh đầu lưỡi thành hình vòng cung</li>
+                <li>Tạo âm “t” giống trong từ “tiên tiến”</li>
+                <li>Cơ hàm dưới không di chuyển</li>
+              </ol>
             </div>
           </li>
           <li>
-            <a href="#consonants-14" class="accordion-toggle">Số 14 <span>/d/</span></a>
+            <a href="#consonants-14" class="accordion-toggle done">Số 14 <span>/d/</span></a>
             <div class="accordion-content" id="consonants-14">
-              Updating...
+              <ol>
+                <li>Môi mở</li>
+                <li>1/3 đầu lưỡi nâng lên chạm vòm họng</li>
+                <li>Ép lực</li>
+                <li>Bật mạnh 1/3 đầu lưỡi hướng hình vòng cung</li>
+                <li>Tạo âm /d/ giống trong từ "/d/ảm /d/ang"</li>
+                <li>Cơ hàm dưới không di chuyển</li>
+              </ol>
             </div>
           </li>
           <li>
-            <a href="#consonants-15" class="accordion-toggle">Số 15 <span>/tʃ/</span></a>
+            <a href="#consonants-15" class="accordion-toggle done">Số 15 <span>/tʃ/</span></a>
             <div class="accordion-content" id="consonants-15">
-              Updating...
+              <p class="note">Phần 1: tạo âm /t/</p>
+              <ol>
+                <li>Môi mở</li>
+                <li>Hai hàm răng gần như chạm nhau</li>
+                <li>Đầu lưỡi chạm đầu răng hàm trên</li>
+                <li>Bật mạnh đầu lưỡi thành hình vòng cung</li>
+                <li>Tạo âm “t” giống trong từ “tiên tiến”</li>
+                <li>Cơ hàm dưới không di chuyển</li>
+              </ol>
+              <p class="note">Phần 2: tạo âm /j/</p>
+              <ol>
+                <li>Môi mở</li>
+                <li>Chính giữa thân lưỡi nâng lên có khuynh hướng chạm vòm họng</li>
+                <li>Ép lực</li>
+                <li>Tạo âm /j/ giống trong từ 'da diết' với độ mạnh gấp 3 lần</li>
+                <li>Cơ hàm dưới không di chuyển</li>
+              </ol>
+              <p class="note">Phần 3: kết hợp âm /t/ và /j/</p>
+              <ol>
+                <li>Phần 1 mạnh hơn phần 2, không được ngắt quãng khi chuyển từ âm /t/ sang âm /j/</li>
+              </ol>
             </div>
           </li>
           <li>
-            <a href="#consonants-16" class="accordion-toggle">Số 16 <span>/dʒ/</span></a>
+            <a href="#consonants-16" class="accordion-toggle done">Số 16 <span>/dʒ/</span></a>
             <div class="accordion-content" id="consonants-16">
-              Updating...
+              <p class="note">Phần 1: tạo âm /d/</p>
+              <ol>
+                <li>Môi mở</li>
+                <li>1/3 đầu lưỡi nâng lên chạm vòm họng</li>
+                <li>Ép lực</li>
+                <li>Bật mạnh 1/3 đầu lưỡi hướng hình vòng cung</li>
+                <li>Tạo âm /d/ giống trong từ "/d/ảm /d/ang"</li>
+                <li>Cơ hàm dưới không di chuyển</li>
+              </ol>
+              <p class="note">Phần 2: tạo âm /j/</p>
+              <ol>
+                <li>Môi mở</li>
+                <li>Chính giữa thân lưỡi nâng lên có khuynh hướng chạm vòm họng</li>
+                <li>Ép lực</li>
+                <li>Tạo âm /j/ giống trong từ 'da diết' với độ mạnh gấp 3 lần</li>
+                <li>Cơ hàm dưới không di chuyển</li>
+              </ol>
+              <p class="note">Phần 3: kết hợp phần 1 và phần 2</p>
+              <ol>
+                <li>Đọc âm /d/ trước sau đó đọc lướt liền qua âm /j/</li>
+                <li>Phần 1 mạnh hơn phần 2 gấp 3 lần, không được ngắt quãng khi chuyển từ âm /d/ qua âm /j/.</li>
+              </ol>
             </div>
           </li>
           <li>
