Add the option for numbers

--- a/index.html
+++ b/index.html
@@ -681,6 +681,9 @@
         <option value="number">Number</option>
         <option value="word">Word</option>
         <option value="mixed">Mixed</option>
+        <option value="ordinalNumbers">Ordinal Numbers</option>
+        <option value="cardinalNumbers">Cardinal Numbers</option>
+        <option value="mixNumbers">Mix Numbers</option>
       </select>
   </div>
   <div class="custom-radio d-flex">
@@ -703,6 +706,11 @@
         <option value="10">10</option>
         <option value="15">15</option>
         <option value="20">20</option>
+      </select>
+      <select class="browser-default" id="delayNumber">
+        <option value="1">1 miniute</option>
+        <option value="2">2 minutes</option>
+        <option value="3">3 minutes</option>
       </select>
     </div>
     <div class="custom-checkbox inline-div w-50 pl-10">
