--- a/index.html
+++ b/index.html
@@ -701,17 +701,21 @@
     <div class="inline-div w-50 pr-10">
       <select class="browser-default" id="delay">
         <option value="1">1</option>
+        <option value="2">2</option>
         <option value="3">3</option>
+        <option value="4">4</option>
         <option value="5">5</option>
         <option value="10">10</option>
         <option value="15">15</option>
         <option value="20">20</option>
       </select>
+      <!--
       <select class="browser-default" id="delayNumber">
         <option value="1">1 miniute</option>
         <option value="2">2 minutes</option>
         <option value="3">3 minutes</option>
       </select>
+      -->
     </div>
     <div class="custom-checkbox inline-div w-50 pl-10">
       <label class="control control--checkbox">
