--- a/index.html
+++ b/index.html
@@ -700,14 +700,14 @@
   <div class="custom-select d-flex">
     <div class="inline-div w-50 pr-10">
       <select class="browser-default" id="delay">
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
-        <option value="5">5</option>
-        <option value="10">10</option>
-        <option value="15">15</option>
-        <option value="20">20</option>
+        <option value="1">1s</option>
+        <option value="2">2s</option>
+        <option value="3">3s</option>
+        <option value="4">4s</option>
+        <option value="5">5s</option>
+        <option value="10">10s</option>
+        <option value="15">15s</option>
+        <option value="20">20s</option>
       </select>
       <!--
       <select class="browser-default" id="delayNumber">
